fixed header active link on mobile, changed design to be more mobile pleasing

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -61,7 +61,7 @@ body, html {
     }
 
     .active-link {
-      color: green;
+      border-bottom: 2px $header-active-link-color solid;
     }
   }
 
@@ -202,6 +202,12 @@ body, html {
 
         &:hover {
           color: #ffffff;
+        }
+      }
+
+      .active-link {
+        &:hover {
+          border-bottom: 2px $header-active-link-color solid;
         }
       }
     }
