--- a/src/css/partials/_variables.scss
+++ b/src/css/partials/_variables.scss
@@ -2,3 +2,4 @@ $header-height: 250px;
 $small-header-height: 225px;
 $footer-height: 100px;
 $project-div-height: 150px;
+$header-active-link-color: #f1c40f;
